Part II.4 Line Selection Complete

--- a/2D Drawing.html
+++ b/2D Drawing.html
@@ -35,7 +35,7 @@
   <h1 id="App_Title">2D Drawing</h1>
 
   <div style="float:left">
-    <canvas id="webgl" width="600" height="600">
+    <canvas id="webgl" width="600" height="600" oncontextmenu="return false;">
       Please use a browser that supports "canvas"
     </canvas>
   </div>
