Part III.10 Color Change Complete

--- a/2D Drawing.html
+++ b/2D Drawing.html
@@ -53,9 +53,9 @@
     <!-- sliders
          Student Note:  See https://www.w3.org/wiki/HTML/Elements/input/range
       -->
-    Red: <input type="range" id="RedRange"><br>
-    Green: <input type="range" id="GreenRange"><br>
-    Blue: <input type="range" id="BlueRange"><br>
+    Red: <input type="range" id="RedRange" min="0.0" max="1.0" step="0.01"><br>
+    Green: <input type="range" id="GreenRange" min="0.0" max="1.0" step="0.01"><br>
+    Blue: <input type="range" id="BlueRange" min="0.0" max="1.0" step="0.01"><br>
   </div>
 
   <!-- load JS scripts -->
